--- a/visitor-app-ui/src/css/app.css
+++ b/visitor-app-ui/src/css/app.css
@@ -5,6 +5,9 @@
     Description:
         This is where any of your application specific styles should be included
 */
+h2 {
+  color: red;
+}
 
 .send-off-screen {
   position: absolute;
